<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by TVB Ledoux on 10/07/22 22:19
  ~  Copyright (c) 2022 . All rights reserved.
  ~  Last modified 10/07/22 22:15
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primary_fond"
    tools:context=".chant.Hymnes_et_lg">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_23sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_bac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/texte_primary" />

    <LinearLayout
        android:id="@+id/recherche_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/bg_recherche"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/imageBack">

        <ImageView
            android:layout_width="@dimen/_20ssp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_recherche"
            app:tint="?attr/texte_primary" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:background="@null"
            android:focusable="false"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/rechercher_des_chants"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textColor="?attr/texte_primary"
            android:textColorHint="?attr/color_icones"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recherche_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingBottom="@dimen/_16sdp"
            android:text="@string/hymnes_et_louages"
            android:textColor="?attr/texte_primary"
            android:textSize="@dimen/_18ssp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_107sdp"
            android:background="?attr/primary_fond"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="?attr/texte_primary"
        android:src="@drawable/ic_keypad"
        android:tint="?attr/color_icones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>