<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primary_fond_secondaire"
    tools:context=".parametres.Parametres">

    <TextView
        android:id="@+id/titreparame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_51sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/param_tres"
        android:textColor="?attr/texte_primary"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titreparame">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/swictCard"
            tools:ignore="NotSibling">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23sdp"
                android:clickable="true"
                android:focusable="true"
                android:padding="2dp">

                <TextView
                    android:id="@+id/mode_sombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ic_hymnes"
                    android:layout_toRightOf="@+id/ic_hymnes"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/mode_sombre"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/texte_primary"
                    android:textSize="@dimen/_18ssp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/swictCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/mode_sombre"
                    android:layout_centerVertical="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints">

                        <Switch
                            android:id="@+id/swich_dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:thumb="@drawable/tumb"
                            android:track="@drawable/track"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/swictCard"
            tools:ignore="NotSibling">

            <!--            <RelativeLayout-->
            <!--                android:id="@+id/h_el_l"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="@dimen/_23sdp"-->
            <!--                android:clickable="true"-->
            <!--                android:focusable="true"-->
            <!--                android:padding="2dp">-->


            <!--                <ImageView-->
            <!--                    android:id="@+id/ic_hymnes"-->
            <!--                    android:layout_width="23dp"-->
            <!--                    android:layout_height="22dp"-->
            <!--                    android:layout_marginStart="@dimen/_3sdp"-->
            <!--                    android:src="@drawable/ic_langue"-->
            <!--                    android:layout_marginEnd="@dimen/_12sdp"/>-->

            <!--                <TextView-->
            <!--                    android:id="@+id/changeLang"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_toEndOf="@+id/ic_hymnes"-->
            <!--                    android:layout_toRightOf="@+id/ic_hymnes"-->
            <!--                    android:fontFamily="@font/ubuntu_regular"-->
            <!--                    android:textColor="?attr/texte_primary"-->
            <!--                    android:text="@string/changer_langue"-->
            <!--                    android:textAppearance="?attr/textAppearanceBody2"-->
            <!--                    android:textSize="@dimen/_14ssp" />-->

            <!--            </RelativeLayout>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/langues"
                    android:textColor="?attr/texte_primary"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/txt1"
                    android:background="@drawable/spinner_background"
                    android:popupBackground="?attr/primary_fond_secondaire" />
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>